// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch snapshot defaultChecked 1`] = `
<span
  class="za-switch"
>
  <input
    checked=""
    class="za-switch__input"
    type="checkbox"
    value="on"
  />
</span>
`;

exports[`Switch snapshot renders correctly 1`] = `
<span
  class="za-switch"
>
  <input
    class="za-switch__input"
    type="checkbox"
    value="off"
  />
</span>
`;
